@@ -24,6 +24,7 @@
 #include "../DataBox.h"
 #include "../stack_array.h"
 #include "../dxgi/Adapter.h"
+#include "../dxgi/Factory1.h"
 
 #include "Direct3D10Exception.h"
 
@@ -137,6 +138,40 @@ namespace Direct3D10
 		
 		Construct( device );
 		InitializeSubclasses();
+	}
+
+	SlimDX::DXGI::Factory^ Device::Factory::get()
+	{
+		IDXGIDevice *device = 0;
+		if (RECORD_D3D10(InternalPointer->QueryInterface(IID_IDXGIDevice, reinterpret_cast<void**>(&device))).IsFailure)
+			return nullptr;
+
+		IDXGIAdapter *adapter = 0;
+		HRESULT hr = device->GetAdapter(&adapter);
+		if (FAILED(hr))
+			device->Release();
+
+		if (RECORD_D3D10(hr).IsFailure)
+			return nullptr;
+
+		SlimDX::DXGI::Factory^ result = nullptr;
+
+		IDXGIFactory1 *factory1;
+		hr = adapter->GetParent(IID_IDXGIFactory1, reinterpret_cast<void**>(&factory1));
+		if (SUCCEEDED(hr))
+			result = SlimDX::DXGI::Factory1::FromPointer(factory1, this);
+		else
+		{
+			IDXGIFactory *factory;
+			hr = adapter->GetParent(IID_IDXGIFactory, reinterpret_cast<void**>(&factory));
+			if (SUCCEEDED(hr))
+				result = SlimDX::DXGI::Factory::FromPointer(factory, this);
+		}
+
+		adapter->Release();
+		device->Release();
+
+		return result;
 	}
 
 	InputAssemblerWrapper^ Device::InputAssembler::get()
