@@ -9,6 +9,10 @@ DXGI
 
 Direct3D 10
 	* Added an overload to Texture.Map to take an array slice index.
+	* Added a Factory property to the Device to make it easy to get the associated factory.
+
+Direct3D 11
+	* Added a Factory property to the Device to make it easy to get the associated factory.
 
 DirectInput
 	* Changed DirectInput DeviceInstance to properly mask out the DeviceType flag.
